# dynamic_batching_tg

./: .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
launcher/: Cargo.toml
launcher/src/: main.rs
proto/: service.proto
router/: Cargo.toml
router/client/: Cargo.toml  build.rs
router/client/src/: lib.rs
router/src/: lib.rs  main.rs  processor.rs  queue.rs
server/: Cargo.toml  build.rs
server/src/: main.rs
server/src/pb/: mod.rs  reply.v1.rs
telegram_bot/: Cargo.toml
telegram_bot/src/: main.rs
