[workspace]
members = [
    "launcher",
    "telegram_bot",
    "server", "router",
    "router/client"
]

resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["Alexander Markov"]

[profile.release]
incremental = true

[profile.release-binary]
inherits = "release"
debug = 1
incremental = true
panic = "abort"

[profile.release-opt]
inherits = "release"
debug = 0
incremental = false
lto = "fat"
opt-level = 3
codegen-units = 1