[package]
name = "router"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
tokio = "1.38.0"
tracing = "0.1.40"
reply-client = { path = "client" }
anyhow = "1.0.86"
http = "0.2.12"
clap = { version = "4.5.7", features = ["derive"] }
tonic = "0.11.0"
tracing-subscriber = "0.3.18"
axum = "0.7.5"