[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
anyhow = "1.0.86"
serde_json = "1.0.117"
teloxide = "0.12.2"
tokio = { version = "1.38.0", features = ["macros", "full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
